# quantick

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/: settings.json
.claude/skills/issue/: SKILL.md
.claude/skills/new-task/: SKILL.md
.claude/skills/ship/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
bridge/mt5/: PROTOCOL.md  QuantickBridge.mq5  README.md
crates/app/: Cargo.toml  build.rs
crates/app/config/: feeds.toml
crates/app/src/: app.rs  candle_view.rs  chart.rs  config.rs  demo.rs  feed.rs  main.rs  metrics.rs  orderflow_engine.rs  orderflow_render.rs  orderflow_view.rs  orderflow_worker.rs  price_view.rs  state.rs  style.rs  timezone.rs  viewport.rs
crates/app/src/feed/: binance.rs  metatrader.rs  mod.rs
crates/app/src/orderflow/: config.rs  grouping.rs  history.rs  interaction.rs  mod.rs  projection.rs  timeline.rs
crates/engine/: Cargo.toml
crates/engine/benches/: hot_path.rs
crates/engine/src/: bar.rs  builder.rs  dollar.rs  fixture.rs  golden.rs  imbalance.rs  lib.rs  threshold.rs  tick.rs  time.rs  trade.rs  volume.rs
crates/engine/tests/: fixture_roundtrip.rs  golden_dollar.rs  golden_harness.rs  golden_imbalance.rs  golden_tick.rs  golden_time.rs  golden_volume.rs
crates/engine/tests/fixtures/: dollar_t500_expected.csv  dollar_trades.csv  imbalance_t8_expected.csv  imbalance_trades.csv  passthrough_expected.csv  sample_trades.csv  tick_n3_expected.csv  tick_trades.csv  time_i1000_expected.csv  time_trades.csv  volume_t5_expected.csv  volume_trades.csv
crates/feed-binance/: Cargo.toml
crates/feed-binance/src/: backfill.rs  continuity.rs  lib.rs  reconnect.rs  stream.rs  wire.rs
crates/feed-binance/src/depth/: mod.rs  reconnect.rs  snapshot.rs  stream.rs  sync.rs  wire.rs
crates/feed-binance/tests/: anomaly_tracing.rs  depth_tracing.rs  depth_wire_mapping.rs  wire_mapping.rs
crates/feed-binance/tests/fixtures/: rest_aggtrades.json  rest_depth_snapshot.json  ws_aggtrade.json  ws_depth_update.json
crates/feed-mt5/: Cargo.toml
crates/feed-mt5/examples/: replay_bridge.rs
crates/feed-mt5/src/: lib.rs  map.rs  protocol.rs  session.rs  stream.rs
crates/feed-mt5/tests/: bridge_server.rs  fixture_replay.rs
crates/feed-mt5/tests/fixtures/: win_ticks.ndjson
crates/orderbook/: Cargo.toml
crates/orderbook/src/: book.rs  error.rs  lib.rs  model.rs
heatmap-design-ref/: capture_window.ps1  heatmap_lab.py  heatmap_study.html  maximize.ps1
tools/mt5/: record_ticks.py
