[package]
name = "quantick-app"
description = "Desktop chart for quantick (egui/wgpu planned)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quantick-engine = { path = "../engine" }
rust_decimal = "1"
eframe = { version = "0.29", default-features = false, features = [
    "glow",
    "wayland",
    "x11",
    "default_fonts",
] }
