[package]
name = "quantick-app"
description = "Desktop chart for quantick (egui/wgpu planned)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quantick-engine = { path = "../engine" }
quantick-feed-binance = { path = "../feed-binance" }
rust_decimal = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "time"] }
tracing = "0.1"
eframe = { version = "0.29", default-features = false, features = [
    "glow",
    "wayland",
    "x11",
    "default_fonts",
] }
