[package]
name = "quantick-feed-binance"
description = "Live aggTrades feed from Binance public endpoints"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quantick-engine = { path = "../engine" }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
