[package]
name = "quantick-feed-binance"
description = "Live aggTrades feed from Binance public endpoints"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quantick-engine = { path = "../engine" }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
