[package]
name = "quantick-feed-mt5"
description = "MetaTrader 5 tick feed over the local QuantickBridge socket"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quantick-engine = { path = "../engine" }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "time", "io-util", "macros"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
